# accessibility-audit-bot

./: .gitignore  README.md  pyproject.toml
sample_site/: index.html
src/accessibility_audit_bot/: __init__.py  app.py  gemini_client.py  models.py  scanner.py  service.py  tavily_client.py
src/accessibility_audit_bot/assets/: axe.min.js
tests/: test_audit.py
